--- a/site/pages/sponsorship.th.html
+++ b/site/pages/sponsorship.th.html
@@ -103,8 +103,9 @@ type: micro
                       </div>
                       <div class="sponsors-card-wrap__right">
                           <p>
-                              ODDS is a group of diversity but has same soul believed in crafting software with fun.
-                              Our passion is elevate outcome of software by unstoppable rhythm of learning.
+                             เราคือกลุ่มคนที่เชื่อว่าการทำซอฟต์แวร์ต้องสนุก โดยที่ได้เรียนรู้ พัฒนาและฝึกฝนตนเองอยู่เสมอ
+                             การทำซอฟต์แวร์ทีดีสำหรับพวกเราคือการทำซอฟท์แวร์ที่ตอบสนองต่อภาคธุรกิจหรือแก้ปัญหาได้อย่างมีประสิทธิภาพและประสิทธิผล 
+                            ดังนั้นเราจึงเรียนรู้ที่จะทำซอฟต์แวร์อย่างถูกต้อง และนำทางให้แก่ผู้อื่นในแวดวงซอฟต์แวร์ด้วย
                           </p>
                       </div>
                   </div>
@@ -112,7 +113,7 @@ type: micro
                       <div class="sponsors-card-wrap__left">
                           <a class="sponsors-link--gold" href="https://www.hot-now.com/" target="_blank">
                               <div class="sponsors-card">
-                                  <img alt="" src="/logos-2009/Gold-HN.png" height="250" />
+                                  <img alt="" src="/logos-2009/Gold-HN.png" height="220" />
                               </div>
                           </a>
                       </div>
@@ -122,14 +123,6 @@ type: micro
                           </p>
                       </div>
                   </div>
-                <div class="sponsors-card-wrap">
-                        <div class="sponsors-card-wrap__left">
-                            <a class="sponsors-link--gold" href="https://www.cloudflare.com/ target="_blank">
-                                <div class="sponsors-card">
-                                    <img alt="" src="/logos-2009/Gold-cloudflare.png" />
-                                </div>
-                            </a>
-                        </div>
                  <div class="sponsors-card-wrap">
                           <div class="sponsors-card-wrap__left">
                               <a class="sponsors-link--gold" href="https://www.cloudflare.com/ target="_blank">
@@ -243,7 +236,7 @@ type: micro
                     </div>
                     <div class="sponsors-card-wrap__right">
                       <p>
-                        
+                        We conduct Python3 Engineer Certification Basic Examination intended to support nurturing Python engineers in Japan. 
                       </p>
                     </div>
                   </div>
@@ -257,9 +250,8 @@ type: micro
                       </div>
                       <div class="sponsors-card-wrap__right">
                         <p>
-                            ThoughtWorks is a global technology consultancy, 6000 people strong across 40 offices in 14 countries. 
-                            We are a custom software company and community of passionate technologists. 
-                        </p>
+                         ธอทเวิร์ค คือบริษัทที่ปรึกษาทางด้านเทคโนโลยีระดับโลก มีพนักงานกว่า6,000คน เรามีสำนักงานกว่า 40แห่งใน14ประเทศทั่วโลก 
+                         เราคือบริษัทที่รับออกแบบและพัฒนาซอฟแวร์รวมถึงเราคือชุมชนคนรักเทคโนโลยี
                       </div>
                     </div>
               <!--<div class="sponsors-card-wrap">
@@ -408,7 +400,8 @@ type: micro
                   </div>
                   <div class="sponsors-card-wrap__right">
                       <p>
-                          <!-- company description -->
+                    Ticketmelon คือผู้ให้บริการจำหน่ายบัตรอีเว้นท์ออนไลน์มืออาชีพที่ตอบสนองความต้องการของผู้จัดอีเว้นท์ทุกรูปแบบทั้งขนาดเล็กและใหญ่ ด้วยบริการรับชำระเงินซึ่งรับประกันความปลอดภัย 
+                       และ Dashboard แสดงสถิติการขายบัตรแบบ Real-Time อีกทั้งยังมีทีมงานผู้เชี่ยวชาญด้านการจัดอีเว้นท์ที่พร้อมช่วยเหลือผู้จัดงานทุกรูปแบบ
                       </p>
                   </div>
               </div>
