--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -232,6 +232,95 @@
           </p>
         </article>
       </section>
+
+
+        <!--Schedule-->
+        <section class="my-8 text-center">
+            <h2 class="countdown-title red-prepostline font-bold">
+              SCHEDULE
+            </h2>
+            <div class="schedule-row">
+              <div class="schedule-left">
+                <div class="circle"></div>
+                <div class="line"></div>
+              </div>
+              <div class="schedule-right">
+                <h2 class="countdown-title italic mt-0">วันที่ 1.0 - เสาร์ 15/06/19 </h2>
+                <p>
+                    เริ่มวันแรกด้วยกาแฟยาวเช้าพร้อมกับการลงทะเบียนเข้าร่วมงาน พูดคุยทำความรู้จักกัน และพบกับสิ่งที่เราจัดเตรียมเพื่อคุณ
+                    การนำเสนอจากทีมผู้จัดของเรา และ 1 ใน keynote speakers ต่อด้วยการพูดอีก 3 หัวข้อ จากนั้นเข้าสู่ช่วง workshop ที่คุณสามารถเลือกได้ด้วยตนเอง
+                    จบด้วยการรับประทานอาหารตอนเที่ยงแบบผ่อนคลาย
+                    
+                </p>
+              </div>
+            </div>
+            <div class="schedule-row">
+              <div class="schedule-left">
+                <div class="circle"></div>
+                <div class="line"></div>
+              </div>
+              <div class="schedule-right">
+                <h2 class="countdown-title italic mt-0">วันที่ 1.1 - ช่วงบ่าย</h2>
+                <p>
+                    กลับมาต่อกันกับหัวข้อไพธอนแบบมาราธอนที่น่าสนใจ เลือกหัวข้อที่ชื่นชอบได้ด้วยตนเอง คว้าโอกาสนี้ทำความรู้จักผู้คนในวงการให้มากขึ้น ศึกษาหาข้อมูลต่างๆ  และขยายขอบเขตความรู้ของคุณ
+                    สัมมนาแบบใกล้ชิดกับการนำเสนอแบบสั้นๆในหัวข้อเบาๆ และอีก 1 keynote speaker ในช่วงเวลาประมาณ 5-6 โมงเย็น                    
+                </p>
+              </div>
+            </div>
+            <div class="schedule-row">
+              <div class="schedule-left">
+                <div class="circle"></div>
+                <div class="line"></div>
+              </div>
+              <div class="schedule-right">
+                <h2 class="countdown-title italic mt-0">วันที่ 1.2 - Epic party</h2>
+                <p>
+                    พลาดไม่ได้กับโอกาสที่จะผ่อนคลาย หลังจากผ่านการนำเสนอสิ่งที่น่าสนใจต่างๆ และการแลกเปลี่ยนความรู้ทั้งวัน
+                    ด้วยบทเพลง อาหาร และเครื่องดื่มที่เตรียมไว้ให้คุณ 
+                    เหมาะที่จะพูดคุยกับผู้นำเสนอต่างๆ ผู้สนับสนุนและผู้เข้าร่วมงานอื่นๆ                    
+                </p>
+              </div>
+            </div>
+           <div class="schedule-row">
+              <div class="schedule-left">
+                <div class="circle"></div>
+                <div class="line"></div>
+              </div>
+              <div class="schedule-right">
+                <h2 class="countdown-title italic mt-0">วันที่ 2.0 - อาทิตย์ 16/06/19</h2>
+                <p>
+                    เริ่มวันใหม่แบบเบาๆด้วยกาแฟจากเราเพื่อเพิ่มพลังงานวันที่สองนี้เริ่มด้วยการพบกับ keynote speaker ของเราที่ไม่เป็นรองใคร การอภิปรายอันเต็มไปด้วยแรงบันดาลใจ และ workshop 
+                    ต่างๆจากทั้งชาวไทยและชาวต่างชาติที่ถูกคัดเลือกอย่างพิถีพิถัน พักสักครู่ และเติมพลังงานด้วยอาหารเที่ยง
+                </p>
+              </div>
+           </div>
+           <div class="schedule-row">
+              <div class="schedule-left">
+                <div class="circle"></div>
+                <div class="line"></div>
+              </div> 
+              <div class="schedule-right">
+                  <h2 class="countdown-title italic mt-0">วันที่ 2.1 - ช่วงบ่าย</h2>
+                  <p>
+                      พลาดไม่ได้กับโอกาสที่จะศึกษาพัฒนาความรู้บนหัวข้อที่จะช่วยให้คุณได้เปรียบในการแข่งขันต่างๆ 
+                      เก็บเกี่ยวประโยชน์จากการอภิปรายและ workshop มากมายที่เราจัดเตรียมไว้เพื่อคุณ
+                  </p>
+              </div>
+            </div>
+            <div class="schedule-row">
+              <div class="schedule-left">
+                <div class="circle"></div>
+                <div class="line"></div>
+              </div> 
+              <div class="schedule-right">
+                  <h2 class="countdown-title italic mt-0">วันที่ 2.2 - ปิดงาน</h2>
+                  <p>
+                      ปิดท้ายการอภิปรายสองวันของเราด้วย keynote speaker คนสุดท้ายของเรา 
+                      ทั้งนี้พวกเราจะรวบรวมนำเอาผู้สนับสนุน พันธมิตรต่างๆ ทีม และคุณเป็นแรงผลักดันให้เกิดความก้าวหน้าอีกขั้นของชุมชน Pycon ในประเทศไทย
+                  </p>
+              </div>
+            </div>
+          </section>
       </div>
   </div>
 </div>
@@ -308,26 +397,27 @@
                       <img alt="" src="/logos-2009/Gold-newlogic.png" width="250"/>
                     </div>
                   </a>
-                    <a class="sponsors-link sponsors-link--gold" href="http://odds.team" target="_blank>
+                    <a class="sponsors-link sponsors-link--gold" href="http://odds.team" target="_blank">
                     <div class="sponsors-card">
                       <img alt="" src="/logos-2009/gold-odds_logo.png" width="250"/>
                     </div>
-                  </a>    
-                  <!--<a class="sponsors-link sponsors-link--gold" href="https://www.cloudflare.com/" target="_blank>
+                  </a> 
+                 <a class="sponsors-link sponsors-link--gold" href="https://www.hot-now.com/" target="_blank">
+                    <div class="sponsors-card">
+                      <img alt="" src="/logos-2009/Gold-HN.png" width="250"/>
+                    </div>
+                  </a>  
+                <a class="sponsors-link sponsors-link--gold" href="https://www.cloudflare.com/" target="_blank">
                     <div class="sponsors-card">
                       <img alt="" src="/logos-2009/Gold-cloudflare.png" width="250"/>
                     </div>
-                  </a> -->  
+                  </a>  
                   <!--<a class="sponsors-link sponsors-link--gold" href="https://www.trinityroots.co.th" target="_blank>
                     <div class="sponsors-card">
                       <img alt="" src="/logos-2009/gold-trinityroots.png" width="250"/>
                     </div>
                   </a> -->   
-                  <!--<a class="sponsors-link sponsors-link--gold" href="https://www.hot-now.com/" target="_blank>
-                    <div class="sponsors-card">
-                      <img alt="" src="/logos-2009/Gold-HN.png" width="250"/>
-                    </div>
-                  </a> -->
+                  
                    <!--<a class="sponsors-link sponsors-link--gold" href="https://aws.amazon.com/" target="_blank>
                     <div class="sponsors-card">
                       <img alt="" src="/logos-2009/Gold-HN.png" width="250"/>
@@ -367,6 +457,11 @@
                   <img alt="" src="/logos-2009/silver-pythoned.png" />
                 </div>
               </a>
+              <a class="sponsors-link sponsors-link--silver" href="https://www.thoughtworks.com/" target="_blank">
+                <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/Silver-thoughtworks.png" />
+                </div>
+              </a>    
               <!--<a class="sponsors-link sponsors-link--silver" href="http://www.jetbrains.com" target="_blank">
                <div class="sponsors-card">
                   <img alt="" src="/logos-2009/Silver-jetbrains.png" />
