--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -246,7 +246,7 @@
               </div>
               <div class="schedule-right">
                 <h2 class="countdown-title italic mt-0">วันที่ 1.0 - เสาร์ 15/06/19 </h2>
-                <p class="content">
+                <p class="content text-large">
                     เริ่มวันแรกด้วยกาแฟยาวเช้าพร้อมกับการลงทะเบียนเข้าร่วมงาน พูดคุยทำความรู้จักกัน และพบกับสิ่งที่เราจัดเตรียมเพื่อคุณ
                     การนำเสนอจากทีมผู้จัดของเรา และ 1 ใน keynote speakers ต่อด้วยการพูดอีก 3 หัวข้อ จากนั้นเข้าสู่ช่วง workshop ที่คุณสามารถเลือกได้ด้วยตนเอง
                     จบด้วยการรับประทานอาหารตอนเที่ยงแบบผ่อนคลาย
@@ -261,7 +261,7 @@
               </div>
               <div class="schedule-right">
                 <h2 class="countdown-title italic mt-0">วันที่ 1.1 - ช่วงบ่าย</h2>
-                 <p class="content">
+                 <p class="content text-large">
                     กลับมาต่อกันกับหัวข้อไพธอนแบบมาราธอนที่น่าสนใจ เลือกหัวข้อที่ชื่นชอบได้ด้วยตนเอง คว้าโอกาสนี้ทำความรู้จักผู้คนในวงการให้มากขึ้น ศึกษาหาข้อมูลต่างๆ  และขยายขอบเขตความรู้ของคุณ
                     สัมมนาแบบใกล้ชิดกับการนำเสนอแบบสั้นๆในหัวข้อเบาๆ และอีก 1 keynote speaker ในช่วงเวลาประมาณ 5-6 โมงเย็น                    
                 </p>
@@ -274,7 +274,7 @@
               </div>
               <div class="schedule-right">
                 <h2 class="countdown-title italic mt-0">วันที่ 1.2 - Epic party</h2>
-                 <p class="content">
+                 <p class="content text-large">
                     พลาดไม่ได้กับโอกาสที่จะผ่อนคลาย หลังจากผ่านการนำเสนอสิ่งที่น่าสนใจต่างๆ และการแลกเปลี่ยนความรู้ทั้งวัน
                     ด้วยบทเพลง อาหาร และเครื่องดื่มที่เตรียมไว้ให้คุณ 
                     เหมาะที่จะพูดคุยกับผู้นำเสนอต่างๆ ผู้สนับสนุนและผู้เข้าร่วมงานอื่นๆ                    
@@ -288,7 +288,7 @@
               </div>
               <div class="schedule-right">
                 <h2 class="countdown-title italic mt-0">วันที่ 2.0 - อาทิตย์ 16/06/19</h2>
-                <p class="content">
+                <p class="content text-large">
                     เริ่มวันใหม่แบบเบาๆด้วยกาแฟจากเราเพื่อเพิ่มพลังงานวันที่สองนี้เริ่มด้วยการพบกับ keynote speaker ของเราที่ไม่เป็นรองใคร การอภิปรายอันเต็มไปด้วยแรงบันดาลใจ และ workshop 
                     ต่างๆจากทั้งชาวไทยและชาวต่างชาติที่ถูกคัดเลือกอย่างพิถีพิถัน พักสักครู่ และเติมพลังงานด้วยอาหารเที่ยง
                 </p>
@@ -301,7 +301,7 @@
               </div> 
               <div class="schedule-right">
                   <h2 class="countdown-title italic mt-0">วันที่ 2.1 - ช่วงบ่าย</h2>
-                  <p class="content">
+                  <p class="content text-large">
                       พลาดไม่ได้กับโอกาสที่จะศึกษาพัฒนาความรู้บนหัวข้อที่จะช่วยให้คุณได้เปรียบในการแข่งขันต่างๆ 
                       เก็บเกี่ยวประโยชน์จากการอภิปรายและ workshop มากมายที่เราจัดเตรียมไว้เพื่อคุณ
                   </p>
@@ -314,7 +314,7 @@
               </div> 
               <div class="schedule-right">
                   <h2 class="countdown-title italic mt-0">วันที่ 2.2 - ปิดงาน</h2>
-                   <p class="content">
+                   <p class="content text-large">
                       ปิดท้ายการอภิปรายสองวันของเราด้วย keynote speaker คนสุดท้ายของเรา 
                       ทั้งนี้พวกเราจะรวบรวมนำเอาผู้สนับสนุน พันธมิตรต่างๆ ทีม และคุณเป็นแรงผลักดันให้เกิดความก้าวหน้าอีกขั้นของชุมชน Pycon ในประเทศไทย
                   </p>
