--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -412,13 +412,13 @@
                       <img alt="" src="/logos-2009/Gold-cloudflare.png" width="250"/>
                     </div>
                   </a>  
-                  <!--<a class="sponsors-link sponsors-link--gold" href="https://www.trinityroots.co.th" target="_blank>
+                  <a class="sponsors-link sponsors-link--gold" href="https://www.trinityroots.co.th" target="_blank">
                     <div class="sponsors-card">
                       <img alt="" src="/logos-2009/gold-trinityroots.png" width="250"/>
                     </div>
-                  </a> -->   
+                  </a>  
                   
-                   <!--<a class="sponsors-link sponsors-link--gold" href="https://aws.amazon.com/" target="_blank>
+                   <!--<a class="sponsors-link sponsors-link--gold" href="https://aws.amazon.com/" target="_blank">
                     <div class="sponsors-card">
                       <img alt="" src="/logos-2009/Gold-HN.png" width="250"/>
                     </div>
