--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -544,6 +544,11 @@
                   <img alt="" src="/logos-2009/partner-womenwhocode.jpeg" />
                 </div>
               </a>
+              <a class="sponsors-link sponsors-link--partner" href="" target="_blank">
+                  <div class="sponsors-card">
+                    <img alt="" src="/logos-2009/partner-mybeer.png" />
+                  </div>
+                </a>
           </div>
         </section>
     <section class="sponsors-section">                                                             
