--- a/site/pages/sponsorship.th.html
+++ b/site/pages/sponsorship.th.html
@@ -87,9 +87,11 @@ type: micro
                   </div>
                   <div class="sponsors-card-wrap__right">
                       <p>
-                          Newlogic is a software consultancy and development company headquartered in Singapore with offices throughout Southeast Asia. 
-                          The company offers technical guidance, product prototyping, code auditing, as well as end-to-end implementation and maintenance 
-                          of software solutions. Newlogic specializes in Python/Django and digital identity.
+                           Newlogic คือ บริษัทผู้พัฒนาและให้คำปรึกษาทางด้านซอร์ฟแวร์ ซึ่งมีสำนักงานใหญ่อยู่ที่สิงคโปร์ และมีสำนักงานในเอเชียตะวันออกเฉียงใต้ 
+                       เราเป็นผู้ให้บริการคำแนะนำเชิงเทคนิค การสร้างต้นแบบผลิตภัณฑ์ การตรวจสอบโค้ด รวมถึงการประยุกต์การใช้งานแบบครบวงจร และการพัฒนาปรับปรุงซอฟต์แวร์ 
+                       Newlogic มีความเชี่ยวชาญเป็นพิเศษใน Python/Django และการยืนยันตัวตนทางดิจิตอล
+
+
                       </p>
                   </div>
               </div>
@@ -119,7 +121,12 @@ type: micro
                       </div>
                       <div class="sponsors-card-wrap__right">
                           <p>
-                              
+                           HotNow platform provides merchants with cost-effective, high-efficacy marketing tools, 
+                           while encouraging merchants to transfer some of that value surplus to consumers of their goods and services. 
+                           The platform will become a network that utilizes strict open source protocols, smart contracts, and developments in distributed ledger. 
+                           HotNow is a gamified ecosystem based on a utilitarian access token and micro-transactions. HotNow has tight partnership with game companies 
+                           and has developed a portfolio of game integrations. These integrations are seamless to the gameplay where the players will not only gain benefits 
+                           inside the game but also in the real world.   
                           </p>
                       </div>
                   </div>
@@ -133,11 +140,10 @@ type: micro
                           </div>
                           <div class="sponsors-card-wrap__right">
                               <p>
-                                  Cloudflare is on a mission to help build a better Internet. That’s why we built a global cloud network that provides security and performance solutions to more than 16 million Internet properties. 
-                                  Our suite of products includes best-in-class DDoS protection, a global CDN, one-click SSL, bot management, DNS protection, 
-                                  serverless JavaScript execution, and even an at-cost domain name registrar.
-                                  Cloudflare is designed for everyone: our tiered pricing attracts a broad range of customers including businesses, non-profits, 
-                                  and individuals. We also work on behalf of human rights and democracy, giving at-risk public interest groups our highest level of protection for free.
+                                  Cloudflare คือ บริการที่จะช่วยให้คุณสามารถใช้ อินเตอร์เน็ตได้เร็วขึ้น นี่คือเหตุว่าทำไม พวกเราถึงสร้าง  global cloud network ที่ให้การรักษาความปลอดภัย และ ประสิทธิภาพ มากกว่า
+16 ล้าน  คุณสมบัติของอินเตอร์เน็ต โดยที่ ผลิตภัณฑ์ของเรามี ระบบป้องกัน DDoS, a global CDN, one-click SSL, bot management, DNS protection, serverless JavaScript execution และ ผู้ให้บริการจดทะเบียน ชื่อโดเมน แบบเสียค่าใช้จ่าย
+	Cloudflare ถูกออกแบบมาสำหรับผู้ใช้ทุกคน โดยที่ราคาที่เรากำหนดนั้นสามารถดึงดูดลูกค้าทุกคน ไม่ว่าจะเป็นการใช้สำหรับ ธุรกิจ,แบบไม่แสวงหาผลกำไร และ ส่วนบุคคล พวกเรา ทำงานโดยคำนึงถึง สิทธิมนุษย์ชน และ ประชาธิปไตย เพื่อที่จะให้กับสาธารณะ โดยพวกเรามีระบบการป้องกันที่ดีที่สุด และ ที่สำคัญฟรี!
+
                               </p>
                           </div>
                       </div>
@@ -151,11 +157,12 @@ type: micro
                       </div>
                       <div class="sponsors-card-wrap__right">
                           <p>
-                              Trinity Roots is an experienced team who provides consulting and implementing Enterprise Solutions. 
-                              We are primarily focused on Odoo ERP in supply chain, CRM, retail and also an accounting system which is accepted by the Thai Revenue Department. 
-                              To maximize your business value by gaining insight data in your ERP Solution and connect to other data sources both structured data and unstructured data. 
-                              Therefore, we continue to expand Data Solutions and Services to ensure we can maximize customer business value by gaining insight data from ERP Solution and 
-                              connect to other data sources both structured data and unstructured data by using tools such as Alteryx, Tableau, Power BI, etc. 
+                              Trinity Roots เป็น System Integrator ที่เชี่ยวชาญในการให้คำปรึกษาและวางระบบการบริหารจัดการข้อมูลในองค์กร หรือ Odoo ERP 
+                              ที่นิยมใช้งานกันอย่างแพร่หลายทั่วโลกรวมถึงประเทศไทย รองรับการทำงานบนระบบ Cloud อย่าง Google Cloud Platform ซึ่งบริษัทฯ ยังเป็น Partner 
+                              ที่สามารถให้คำแนะนำ, ดูแลในการนำระบบขึ้น Cloud ได้อีกด้วย 
+                              นอกจากนั้นยังมี Solution เพื่อการต่อยอดด้วยการนำข้อมูล ซึ่งสามารถรวบรวมมาจากหลากหลายแหล่งข้อมูลเพื่อนำมาวิเคราะห์ 
+                              เพื่อสร้างความได้เปรียบในการแข่งขันทางธุรกิจได้ดีมากยิ่งขึ้น โดยทางบริษัทฯ เป็น Partner กับระบบ Alteryx ซึ่งเป็นระบบ Self-Service Data Analysis 
+                              ชั้นนำของโลก หากท่านสนใจในการบริการของเรา สามารถติดต่อเราได้ที่
                           </p>
                       </div>
                   </div> -->
@@ -191,7 +198,7 @@ type: micro
             </div>
             <div class="sponsors-card-wrap__right">
               <p>
-                Are you looking to hire or are you finding a job? Then think about us! Parker Bridge – The best find in Recruitment.
+               มองหางานที่ชอบหรือต้องการคนที่ใช่ บริษัทจัดหางานปาร์คเกอร์บริดจ์ ที่เดียวครบ จบทุกปัญหา
               </p>
             </div>
            </div>
@@ -315,8 +322,7 @@ type: micro
             </div>
             <div class="sponsors-card-wrap__right">
               <p>
-               Intelligent Bytes is a full-service open-source centric software development company
-               that builds custom web and mobile applications, using cutting-edge technologies.
+              Intelligent Bytes คือ ซอฟแวร์ที่เปิดให้ใช้ฟรี ที่ สามารถสร้าง website และ application ได้โดยใช้เทคโนโลยีที่ล้ำสมัย
               </p>
             </div>
           </div>
@@ -346,8 +352,8 @@ type: micro
                   </div>
                   <div class="sponsors-card-wrap__right">
                       <p>
-                          We are keen to meet and discuss with developers about their work, interests and future ambitions.
-                          Please contact us if you would like to talk!"
+                          พวกเรามีความยินดีที่จะพบปะเพื่อพูดคุยและแลกเปลี่ยนความคิดกับนักพัฒนาระบบ เกี่ยวกับงานของคุณ สิ่งที่คุณสนใจ รวมไปถึง 
+                          สิ่งที่คุณอยากจะทำในอนาคต หากคุณสนใจ สามารถติดต่อพวกเราได้
                       </p>
                   </div>
               </div>
@@ -448,10 +454,23 @@ type: micro
                   </p>
               </div>
           </div>
+                                                    <div class="sponsors-card-wrap">
+              <div class="sponsors-card-wrap__left">
+                  <a class="sponsors-link--partner" href="http://www.womenwhocodethailand.com" target="_blank">
+                      <div class="sponsors-card">
+                          <img alt="" src="/logos-2009/partner-girls-who-dev.png	" />
+                      </div>
+                  </a>
+              </div>
+              <div class="sponsors-card-wrap__right">
+                  <p>
+                      Girls Who Dev (GWD) คือกลุ่มอาสาสมัครที่สนับสนุนและส่งเสริมให้ผู้หญิงมีส่วนร่วมในการเข้าถึงซอฟต์แวร์และเทคโนโลยี 
+                      โดยเฉพาะการเรียนรู้และแนะนำเกี่ยวกับการเขียนโปรแกรม การคิดแบบเชิงคำนวนณเพื่อให้สังคมของเราได้เห็นศักยภาพของผู้หญิงที่แท้จริงในสายซอฟต์แวร์ให้กว้างขวางยิ่งขึ้น
+                  </p>
+              </div>
+          </div>
           </div>
       </section>
-
-
 
 <h3>ผู้สนับสนุน</h3>
 
