--- a/site/pages/sponsorship.th.html
+++ b/site/pages/sponsorship.th.html
@@ -121,12 +121,10 @@ type: micro
                       </div>
                       <div class="sponsors-card-wrap__right">
                           <p>
-                           HotNow platform provides merchants with cost-effective, high-efficacy marketing tools, 
-                           while encouraging merchants to transfer some of that value surplus to consumers of their goods and services. 
-                           The platform will become a network that utilizes strict open source protocols, smart contracts, and developments in distributed ledger. 
-                           HotNow is a gamified ecosystem based on a utilitarian access token and micro-transactions. HotNow has tight partnership with game companies 
-                           and has developed a portfolio of game integrations. These integrations are seamless to the gameplay where the players will not only gain benefits 
-                           inside the game but also in the real world.   
+                           ที่ HotNow เราสร้างแพลตฟอร์มให้ร้านค้าสามารถทำการตลาดได้อย่างมีประสิทธิภาพและคุ้มค่า พร้อมทั้งส่งเสริมให้ร้านค้าส่งต่อความคุ้มค่านี้ไปยังผู้ซื้อสินค้าและบริการด้วย 
+				  แพลตฟอร์มของ HotNow สร้างขึ้นโดยใช้ Open source protocols, smart contracts, และ distributed ledgers เป้าหมายของเราคือการเป็น 
+				  gamified ecosystem ที่ใช้ cryptocurrency utility token เป็นกลไกหลัก และการที่ HotNow มีความสัมพันธ์ที่แน่นแฟ้นกับบริษัทเกม ทำให้เราสามารถผสมผสานแพลตฟอร์มของเรากับเกม 
+				  และให้ผู้เล่นนำสิ่งที่ได้จากเกมมาใช้ในชีวิตจริงได้อีกด้วย  
                           </p>
                       </div>
                   </div>
@@ -184,8 +182,10 @@ type: micro
             </div>
             <div class="sponsors-card-wrap__right">
               <p>
-                <!-- company description -->
-              </p>
+		Come to PyCon Thailand 2019 and discover exciting career opportunities at Vizrt, 					 
+		a worldwide market leader in creating leading-edge content production tools for the digital media industry. 
+		http://bit.ly/VizrtJob
+		</p>
             </div>
           </div>
           <div class="sponsors-card-wrap">
@@ -454,11 +454,11 @@ type: micro
                   </p>
               </div>
           </div>
-                                                    <div class="sponsors-card-wrap">
+             <div class="sponsors-card-wrap">
               <div class="sponsors-card-wrap__left">
-                  <a class="sponsors-link--partner" href="http://www.womenwhocodethailand.com" target="_blank">
+                  <a class="sponsors-link--partner" href="https://www.facebook.com/girlswhodev/" target="_blank">
                       <div class="sponsors-card">
-                          <img alt="" src="/logos-2009/partner-girls-who-dev.png	" />
+                          <img alt="" src="/logos-2009/partner-girls-who-dev.png" height="150 />
                       </div>
                   </a>
               </div>
