--- a/site/pages/sponsorship.th.html
+++ b/site/pages/sponsorship.th.html
@@ -115,7 +115,7 @@ type: micro
                       <div class="sponsors-card-wrap__left">
                           <a class="sponsors-link--gold" href="https://www.hot-now.com/" target="_blank">
                               <div class="sponsors-card">
-                                  <img alt="" src="/logos-2009/Gold-HN.png" height="220" />
+                                  <img alt="" src="/logos-2009/Gold-HN.png" height="200" />
                               </div>
                           </a>
                       </div>
@@ -337,7 +337,7 @@ type: micro
             </div>
             <div class="sponsors-card-wrap__right">
               <p>
-                      Best in class productivity tools that enable smart and efficient marketing execution for small businesses.
+              คือ tools ที่สามารถ จัดการการตลาดได้อย่างมีประสิทธิภาพสำหรับธุรกิจขนาดเล็ก
               </p>
             </div>
            </div>
