--- a/site/pages/sponsorship.en.html
+++ b/site/pages/sponsorship.en.html
@@ -120,7 +120,12 @@ type: micro
                   </div>
                   <div class="sponsors-card-wrap__right">
                       <p>
-                          
+                       HotNow platform provides merchants with cost-effective, high-efficacy marketing tools, 
+                        while encouraging merchants to transfer some of that value surplus to consumers of their goods and services. 
+                        The platform will become a network that utilizes strict open source protocols, smart contracts, and developments in distributed ledger. 
+                        HotNow is a gamified ecosystem based on a utilitarian access token and micro-transactions. 
+                        HotNow has tight partnership with game companies and has developed a portfolio of game integrations. 
+                        These integrations are seamless to the gameplay where the players will not only gain benefits inside the game but also in the real world.   
                       </p>
                   </div>
               </div>
@@ -178,7 +183,9 @@ type: micro
       </div>
       <div class="sponsors-card-wrap__right">
         <p>
-          <!-- company description -->
+         Come to PyCon Thailand 2019 and discover exciting career opportunities at Vizrt,             
+         a worldwide market leader in creating leading-edge content production tools for the digital media industry. 
+          http://bit.ly/VizrtJob
         </p>
       </div>
     </div>
@@ -449,7 +456,22 @@ type: micro
                 <!-- company description -->
             </p>
         </div>
-    </div>
+      </div>
+      <div class="sponsors-card-wrap">
+          <div class="sponsors-card-wrap__left">
+              <a class="sponsors-link--partner" href="https://www.facebook.com/girlswhodev/" target="_blank">
+                 <div class="sponsors-card">
+                    <img alt="" src="/logos-2009/partner-girls-who-dev.png" height="150 />
+                 </div>
+               </a>
+            </div>
+              <div class="sponsors-card-wrap__right">
+                  <p>
+                      Girls Who Dev (GWD) คือกลุ่มอาสาสมัครที่สนับสนุนและส่งเสริมให้ผู้หญิงมีส่วนร่วมในการเข้าถึงซอฟต์แวร์และเทคโนโลยี 
+                      โดยเฉพาะการเรียนรู้และแนะนำเกี่ยวกับการเขียนโปรแกรม การคิดแบบเชิงคำนวนณเพื่อให้สังคมของเราได้เห็นศักยภาพของผู้หญิงที่แท้จริงในสายซอฟต์แวร์ให้กว้างขวางยิ่งขึ้น
+                  </p>
+              </div>
+          </div>
     </div>
 </section>
 
