--- a/site/pages/sponsorship.th.html
+++ b/site/pages/sponsorship.th.html
@@ -458,7 +458,7 @@ type: micro
               <div class="sponsors-card-wrap__left">
                   <a class="sponsors-link--partner" href="https://www.facebook.com/girlswhodev/" target="_blank">
                       <div class="sponsors-card">
-                          <img alt="" src="/logos-2009/partner-girls-who-dev.png" height="150 />
+                          <img alt="" src="/logos-2009/partner-girls-who-dev.png" height="150" />
                       </div>
                   </a>
               </div>
