--- a/site/pages/sponsorship.en.html
+++ b/site/pages/sponsorship.en.html
@@ -461,14 +461,14 @@ type: micro
           <div class="sponsors-card-wrap__left">
               <a class="sponsors-link--partner" href="https://www.facebook.com/girlswhodev/" target="_blank">
                  <div class="sponsors-card">
-                    <img alt="" src="/logos-2009/partner-girls-who-dev.png" height="150 />
+                    <img alt="" src="/logos-2009/partner-girls-who-dev.png" height="150" />
                  </div>
                </a>
             </div>
               <div class="sponsors-card-wrap__right">
                   <p>
-                      Girls Who Dev (GWD) คือกลุ่มอาสาสมัครที่สนับสนุนและส่งเสริมให้ผู้หญิงมีส่วนร่วมในการเข้าถึงซอฟต์แวร์และเทคโนโลยี 
-                      โดยเฉพาะการเรียนรู้และแนะนำเกี่ยวกับการเขียนโปรแกรม การคิดแบบเชิงคำนวนณเพื่อให้สังคมของเราได้เห็นศักยภาพของผู้หญิงที่แท้จริงในสายซอฟต์แวร์ให้กว้างขวางยิ่งขึ้น
+                      Girls Who Dev (GWD) is a passionate volunteer community for girls with a mission to help encourage better the female representation
+                      in technology and gain the computational thinking skills through our education and community programs. 
                   </p>
               </div>
           </div>
