--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -543,6 +543,11 @@
                     <img alt="" src="/logos-2009/partner-girls-who-dev.png" />
                   </div>
                 </a>
+                <!--<a class="sponsors-link sponsors-link--partner" href=" http://www.tha6.com/" target="_blank">
+                  <div class="sponsors-card">
+                    <img alt="" src="/logos-2009/Partner-THA-logo-with-background.png" />
+                  </div>
+                </a> -->
               </div>
             </section>
            <section class="sponsors-section">                                                             
