--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -549,6 +549,11 @@
                     <img alt="" src="/logos-2009/partner-mybeer.png" />
                   </div>
                 </a>
+              <a class="sponsors-link sponsors-link--partner" href="https://www.facebook.com/girlswhodev/" target="_blank">
+                  <div class="sponsors-card">
+                    <img alt="" src="/logos-2009/partner-girls-who-dev.png" />
+                  </div>
+                </a>
           </div>
         </section>
     <section class="sponsors-section">                                                             
