--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -418,11 +418,11 @@
                     </div>
                   </a>  
                   
-                   <!--<a class="sponsors-link sponsors-link--gold" href="https://aws.amazon.com/" target="_blank">
+                  <a class="sponsors-link sponsors-link--gold" href="https://aws.amazon.com/" target="_blank">
                     <div class="sponsors-card">
-                      <img alt="" src="/logos-2009/Gold-HN.png" width="250"/>
+                      <img alt="" src="/logos-2009/gold-aws.png	" width="250"/>
                     </div>
-                  </a> -->         
+                  </a>        
                 </div>
                 </section>
                                                                       
@@ -462,21 +462,21 @@
                   <img alt="" src="/logos-2009/Silver-thoughtworks.png" />
                 </div>
               </a>    
-              <!--<a class="sponsors-link sponsors-link--silver" href="http://www.jetbrains.com" target="_blank">
+             <a class="sponsors-link sponsors-link--silver" href="http://www.jetbrains.com" target="_blank">
                <div class="sponsors-card">
                   <img alt="" src="/logos-2009/Silver-jetbrains.png" />
                 </div>
-              </a>-->
-              <!--<a class="sponsors-link sponsors-link--silver" href="http://www.swpark.or.th/index.php" target="_blank">
+              </a>
+             <a class="sponsors-link sponsors-link--silver" href="http://www.swpark.or.th/index.php" target="_blank">
                <div class="sponsors-card">
                   <img alt="" src="/logos-2009/silver-swpark.png" />
                 </div>
-              </a>-->
-              <!--<a class="sponsors-link sponsors-link--silver" href="https://www.prtr.com/" target="_blank">
+              </a>
+             <a class="sponsors-link sponsors-link--silver" href="https://www.prtr.com/" target="_blank">
                <div class="sponsors-card">
                   <img alt="" src="/logos-2009/silver-PRTR.png" />
                 </div>
-              </a>-->
+              </a>
           </div>
         </section>
 
