--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -478,6 +478,11 @@
                      <img alt="" src="/logos-2009/silver-PRTR.png" />
                    </div>
                 </a>
+                <a class="sponsors-link sponsors-link--silver" href="https://cloud.google.com/" target="_blank">
+               <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/silver-googlecloud.png" />
+                </div>
+              </a>
               </div>
             </section>
   
